# isMap-napari

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.napari-hub/: config.yml
src/tcell_analysis/: __init__.py  _version.py  _widget.py  analysis.py  extract_cells.py  metadata_utils.py  metrics.py  my_utils.py  napari.yaml
src/tcell_analysis/masking/: segment.py
src/tcell_analysis/preprocessing/: background.py
src/tcell_analysis/visualization/: flows.py  plots.py  view_in_napari copy.py  view_in_napari.py
