[metadata]
name = predict-tcell
version = 0.1.0
author = Anthony M.
description = Napari plugin for T cell activation analysis
license = BSD-3-Clause

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    napari[all]
    magicgui
    numpy
    pandas
    tifffile
    cellpose
    opencv-python
    torch

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    predict-tcell = tcell_analysis

[options.package_data]
tcell_analysis = napari.yaml
