[metadata]
name = isMap-napari
version = 1.0
author = Anthony M.
description = isMap-napari plugin for T cell activation analysis
license = BSD-3-Clause

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    napari[all]
    magicgui
    numpy
    pandas
    tifffile
    cellpose
    opencv-python
    torch

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    isMap-napari = tcell_analysis

[options.package_data]
tcell_analysis = napari.yaml
